--- a/html-design/html/css/main.scss
+++ b/html-design/html/css/main.scss
@@ -12,4 +12,6 @@
 @import 'pages/campaigns'; 
 @import 'pages/bills-receipts'; 
 @import 'pages/data-download'; 
-@import 'pages/mobile';  
+@import 'pages/subscriberspopup'; 
+@import 'pages/about';
+/* @import 'pages/mobile';  */ 
