--- a/public/global/picstagraph-web/css/index.css
+++ b/public/global/picstagraph-web/css/index.css
@@ -504,12 +504,12 @@ hr {
       width: 100%; }
       .left_menu_second .navbar-nav li a {
         background: transparent;
-        font-family: 'Helvetica';
+        font-family: "Helvetica";
         color: #4a4a4a;
         font-size: 14px;
         padding: 13px 18px; }
         .left_menu_second .navbar-nav li a.log-out {
-          font-family: 'Helvetica-Bold'; }
+          font-family: "Helvetica-Bold"; }
         .left_menu_second .navbar-nav li a:hover {
           background-image: radial-gradient(circle at 0 100%, #029bd7, #1f58a6);
           color: #ffffff; }
@@ -568,13 +568,13 @@ hr {
         right: 0px; }
         .left_menu_second .left-filters .filter-wrapper .radio-btn input ~ .checkmark:after {
           display: block; }
-    .left_menu_second .left-filters .filter-wrapper input[type=text] {
+    .left_menu_second .left-filters .filter-wrapper input[type="text"] {
       height: 40px;
       border: 1px solid #9b9b9b;
       margin-bottom: 25px;
       padding: 10px;
       width: 100%; }
-      .left_menu_second .left-filters .filter-wrapper input[type=text]:focus {
+      .left_menu_second .left-filters .filter-wrapper input[type="text"]:focus {
         outline: none;
         border: 1px solid #4a4a4a; }
     .left_menu_second .left-filters .filter-wrapper select {
