--- a/html-design/html/css/main.css
+++ b/html-design/html/css/main.css
@@ -226,6 +226,9 @@ body {
 .padding-l-5 {
   padding-left: 5px; }
 
+.padding-l-5 {
+  padding-left: 5px; }
+
 hr {
   border: 1px solid #cdcdcd; }
 
@@ -1310,6 +1313,50 @@ header {
             width: 85%; } }
       .about-wrapper .social-networks ul li a {
         color: #4a4a4a; }
+
+.padding-l-10 {
+  padding-left: 10px; }
+
+.information-wrapper {
+  background: #ffffff;
+  margin-bottom: 30px;
+  float: left;
+  width: 100%; }
+  .information-wrapper .info-inner-wrapper {
+    padding: 25px 30px 0px 30px; }
+  .information-wrapper .feed_header {
+    padding: 0px; }
+    .information-wrapper .feed_header .like_wrapper {
+      padding: 0px; }
+  .information-wrapper .info-main-title {
+    font-size: 20px;
+    margin-bottom: 38px; }
+  .information-wrapper .text {
+    font-size: 16px;
+    line-height: 25px;
+    margin-bottom: 15px; }
+  .information-wrapper img {
+    width: 100%;
+    margin-bottom: 15px; }
+  .information-wrapper button {
+    width: 100%;
+    font-family: "Helvetica-Bold";
+    margin-bottom: 25px; }
+  .information-wrapper .feed_footer .messages img, .information-wrapper .feed_footer .likes img {
+    margin-bottom: 0px; }
+  .information-wrapper .feed-comment .comment-wrapper {
+    padding: 10px 30px; }
+    .information-wrapper .feed-comment .comment-wrapper img {
+      width: 45px; }
+    .information-wrapper .feed-comment .comment-wrapper .emoji_wrapper img {
+      width: 20px; }
+    .information-wrapper .feed-comment .comment-wrapper .profile_image {
+      display: inline-block;
+      float: left; }
+    .information-wrapper .feed-comment .comment-wrapper .comment-content p {
+      padding-left: 60px; }
+  .information-wrapper .feed-comment .view-more-comments {
+    padding: 0px 17px; }
 
 /* @import 'pages/mobile';  */
 
