--- a/html-design/html/css/main.scss
+++ b/html-design/html/css/main.scss
@@ -14,4 +14,5 @@
 @import 'pages/data-download'; 
 @import 'pages/subscriberspopup'; 
 @import 'pages/about';
+@import 'pages/information';
 /* @import 'pages/mobile';  */ 
