--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -40,8 +40,14 @@ body {
 .padding-rl-10 {
   padding: 0px 10px;
 }
+.padding-left-10 {
+  padding-left: 10px;
+}
 .size-20 {
   font-size: 20px;
+}
+.width-80 {
+  width: 80% !important;
 }
 hr {
   border: 1px solid #cdcdcd;
