--- a/src/styles/global/pages/index.scss
+++ b/src/styles/global/pages/index.scss
@@ -1,3 +1,12 @@
 @import "../helpers/index.scss";
 @import "_home.scss";
-@import "_mobile.scss";
+@import "_login.scss";
+@import "_privacy.scss";
+@import "_editprofile.scss";
+@import "_businessprofile.scss";
+@import "_campaigns.scss";
+@import "_bills-receipts.scss";
+@import "_data-download.scss";
+@import "_subscriberspopup.scss";
+@import "_about.scss";
+@import "_information.scss";
