create campaign designs

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -55,6 +55,12 @@ body {
 hr {
   border: 1px solid #cdcdcd;
 }
+.disp-flex {
+  display: flex;
+}
+.margin-b-25 {
+  margin-bottom: 25px;
+}
 /******** Titles Style*******************/
 .normal_title {
   color: $charcoal_color;
