pics and user static HTML design

--- a/src/styles/global/pages/index.scss
+++ b/src/styles/global/pages/index.scss
@@ -12,3 +12,5 @@
 @import "_information.scss";
 @import "_upload-img.scss";
 @import "_create-campaign.scss";
+@import "_pics.scss";
+@import "_user.scss";
