--- a/src/styles/global/pages/_login.scss
+++ b/src/styles/global/pages/_login.scss
@@ -1,5 +1,7 @@
 .login-process {
   background: $white_color;
+  @include float;
+  height: 100vh;
   .custom-container {
     width: 700px;
     margin: auto;
