--- a/src/styles/global/pages/index.scss
+++ b/src/styles/global/pages/index.scss
@@ -14,3 +14,5 @@
 @import "_create-campaign.scss";
 @import "_pics.scss";
 @import "_user.scss";
+@import "_create-ad.scss";
+@import "_mobile.scss";
