--- a/public/global/picstagraph-web/css/index.css
+++ b/public/global/picstagraph-web/css/index.css
@@ -493,6 +493,21 @@ header {
             background: transparent; }
             header .navbar-default .navbar-form .search-input-group .input-group-addon button .search_icon img {
               width: 16px; }
+    header .navbar-default .navbar-nav li.open:after {
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-bottom: 10px solid #ffffff;
+      bottom: -6px;
+      position: absolute;
+      top: initial;
+      right: 40px;
+      left: initial;
+      content: ""; }
+    header .navbar-default .navbar-nav li.open a {
+      background: transparent !important;
+      color: #ffffff !important; }
     header .navbar-default .navbar-nav li.active a {
       background: transparent !important;
       color: #ffffff !important; }
@@ -548,6 +563,69 @@ header {
         padding-top: 30px;
         font-size: 12px;
         line-height: 14px; }
+    header .navbar-default .navbar-nav li .notification-mega-wrapper {
+      width: 455px;
+      margin: 0;
+      padding: 0;
+      right: -63px;
+      left: initial;
+      top: 60px;
+      border: 0; }
+      header .navbar-default .navbar-nav li .notification-mega-wrapper nav .nav {
+        border: 0px; }
+        header .navbar-default .navbar-nav li .notification-mega-wrapper nav .nav li.active a {
+          font-family: 'Helvetica-Bold'; }
+        header .navbar-default .navbar-nav li .notification-mega-wrapper nav .nav li a {
+          color: #4a4a4a !important;
+          width: 151px;
+          height: 45px;
+          display: inline-block;
+          float: left;
+          padding-top: 10px;
+          border-right: 2px solid #ededed;
+          border-bottom: 3px solid #ededed;
+          margin: 0; }
+        header .navbar-default .navbar-nav li .notification-mega-wrapper nav .nav li:last-child a {
+          border-right: 0px; }
+      header .navbar-default .navbar-nav li .notification-mega-wrapper .tab-content .tab-pane .header-notifications .notification-wrapper {
+        padding: 12px;
+        float: left;
+        width: 100%;
+        border-bottom: 2px solid #ededed; }
+        header .navbar-default .navbar-nav li .notification-mega-wrapper .tab-content .tab-pane .header-notifications .notification-wrapper img {
+          width: 45px;
+          border-radius: 50%;
+          float: left;
+          margin-right: 10px; }
+        header .navbar-default .navbar-nav li .notification-mega-wrapper .tab-content .tab-pane .header-notifications .notification-wrapper .user-info {
+          display: inline-block;
+          float: left; }
+          header .navbar-default .navbar-nav li .notification-mega-wrapper .tab-content .tab-pane .header-notifications .notification-wrapper .user-info .username {
+            font-family: "Helvetica-Bold"; }
+          header .navbar-default .navbar-nav li .notification-mega-wrapper .tab-content .tab-pane .header-notifications .notification-wrapper .user-info .date {
+            color: #9b9b9b; }
+        header .navbar-default .navbar-nav li .notification-mega-wrapper .tab-content .tab-pane .header-notifications .notification-wrapper .subscribe-btn {
+          display: inline-block;
+          float: right; }
+          header .navbar-default .navbar-nav li .notification-mega-wrapper .tab-content .tab-pane .header-notifications .notification-wrapper .subscribe-btn button {
+            height: 30px;
+            width: 90px;
+            padding-top: 4px;
+            margin-top: 15px;
+            padding-left: 5px;
+            padding-right: 5px; }
+          header .navbar-default .navbar-nav li .notification-mega-wrapper .tab-content .tab-pane .header-notifications .notification-wrapper .subscribe-btn .black_button {
+            width: auto;
+            padding-top: 6px;
+            border: 1px solid #9b9b9b;
+            margin-left: 10px; }
+            header .navbar-default .navbar-nav li .notification-mega-wrapper .tab-content .tab-pane .header-notifications .notification-wrapper .subscribe-btn .black_button img {
+              width: 16px;
+              margin: auto; }
+        header .navbar-default .navbar-nav li .notification-mega-wrapper .tab-content .tab-pane .header-notifications .notification-wrapper .square-image img {
+          border-radius: 0px;
+          width: 60px;
+          float: right; }
 
 .login-process {
   background: #ffffff; }
@@ -1495,7 +1573,10 @@ hr {
       color: #9b9b9b; }
 
 .login-process {
-  background: #ffffff; }
+  background: #ffffff;
+  float: left;
+  width: 100%;
+  height: 100vh; }
   .login-process .custom-container {
     width: 700px;
     margin: auto;
@@ -2470,3 +2551,119 @@ hr {
   height: 30px;
   padding-top: 4px;
   margin-top: 10px; }
+
+header {
+  float: left;
+  width: 100%;
+  display: flex;
+  align-items: center; }
+  header .mobile_logo {
+    display: inline-block;
+    float: left;
+    width: 10%;
+    text-align: center; }
+  header .mobile_intro_text {
+    display: inline-block;
+    float: left;
+    width: 80%;
+    padding: 10px 0px;
+    color: #ffffff; }
+    header .mobile_intro_text p {
+      margin: 0px; }
+  header .mobile_open_btn {
+    display: inline-block;
+    float: left;
+    width: 10%;
+    text-align: center;
+    color: #ffffff; }
+
+.back_option {
+  background-color: #fff;
+  float: left;
+  width: 100%;
+  border-bottom: 1px solid #979797; }
+  .back_option a {
+    color: #4a4a4a;
+    font-size: 16px; }
+    .back_option a img {
+      width: 16px; }
+
+.mobile_language_option {
+  float: left;
+  width: 100%;
+  background-color: #ffffff;
+  border-bottom: 1px solid #979797; }
+  .mobile_language_option .normal_title {
+    border-bottom: 1px solid #979797; }
+  .mobile_language_option .language_inputs .input_wrapper {
+    border-bottom: 1px solid #979797; }
+    .mobile_language_option .language_inputs .input_wrapper label {
+      font-weight: normal;
+      margin: 0; }
+    .mobile_language_option .language_inputs .input_wrapper input {
+      float: right; }
+
+.mobile_menu_wrapper {
+  background-color: #ffffff;
+  float: left;
+  width: 100%; }
+  .mobile_menu_wrapper .normal_title {
+    float: left;
+    width: 100%;
+    border-bottom: 1px solid #979797; }
+  .mobile_menu_wrapper .mobile_menu {
+    float: left;
+    width: 100%;
+    border-bottom: 1px solid #979797;
+    color: #4a4a4a;
+    width: 100%;
+    display: block; }
+    .mobile_menu_wrapper .mobile_menu img {
+      width: 16px; }
+
+.full-height-wrapper {
+  background-color: #ffffff;
+  height: 100vh; }
+  .full-height-wrapper .mobile_menu {
+    width: 10%;
+    text-align: center;
+    float: left; }
+    .full-height-wrapper .mobile_menu button {
+      background-color: transparent;
+      border: 0px; }
+  .full-height-wrapper .language_link {
+    width: 90%;
+    text-align: center;
+    float: left; }
+  .full-height-wrapper .mobile_page_logo {
+    width: 90%;
+    float: right; }
+  .full-height-wrapper .download_option {
+    position: absolute;
+    width: 100%;
+    bottom: 4%; }
+    .full-height-wrapper .download_option img {
+      width: 200px; }
+
+.mobile-modal {
+  position: relative; }
+  .mobile-modal .modal-dialog {
+    width: 100%;
+    margin: 0; }
+    .mobile-modal .modal-dialog .modal-content {
+      border-radius: 0px;
+      float: left;
+      width: 100%;
+      padding-bottom: 15px; }
+      .mobile-modal .modal-dialog .modal-content .modal-body p {
+        display: inline-block;
+        float: left;
+        margin: 0px; }
+      .mobile-modal .modal-dialog .modal-content .modal-body button {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        opacity: 1; }
+
+.modal-backdrop {
+  display: none; }
