--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -1,4 +1,5 @@
 .create-campaign-modal {
+  background: #333;
   .modal-dialog {
     width: 915px;
   }
@@ -22,7 +23,7 @@
   .modal-body {
     display: flex;
     .right-side {
-      background-color: #777777;
+      background-color: #333333;
     }
     .create-campaign-feed-wrapper {
       padding: 40px;
