--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -19,6 +19,9 @@
       margin-left: 10px;
     }
   }
+  .user_details {
+    height: 100%;
+  }
   .user_name {
     font-size: 24px;
     color: $charcoal_color;
@@ -57,7 +60,6 @@
 .left_menu {
   background-color: $white_color;
   z-index: 9;
-  width: 20%;
   float: left;
   .navbar-nav {
     li {
@@ -221,7 +223,6 @@
   }
 }
 .right_bar {
-  width: 30%;
   float: left;
   .normal_title {
     margin-bottom: 3px;
