--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -10,7 +10,7 @@
       padding: 3px;
     }
   }
-  .user-info {
+  .user-details {
     width: 80%;
     float: left;
     display: flex;
@@ -21,6 +21,7 @@
   }
   .user_details {
     height: 100%;
+    width: 100%;
   }
   .user_name {
     font-size: 24px;
